# Telecommunications-and-Signal-Processing

./: LICENSE
Exercise1/: CMakeLists.txt  codedMessage.txt
Exercise1/include/: algorithm.h  doubleErrorCode.h  matrix.h  singleErrorCode.h
Exercise1/src/: algorithm.cpp  main.cpp
Exercise2/: CMakeLists.txt  encoding.h  main.cpp  test.txt
Exercise2/include/: globals.h  port.h  receiver.h  transmitter.h  utility.h
Exercise2/src/: globals.cpp  main.cpp  port.cpp  receiver.cpp  transmitter.cpp  utility.cpp
Exercise3/: CMakeLists.txt  encoding.cpp
Exercise4/Przetwarzanie analogowe/: main.py
